# runespy-worker

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/runespy_worker/: cli.py  client.py  crypto.py  fetcher.py  protocol.py  webui.py
src/runespy_worker/templates/: index.html
