[project]
name = "runespy-worker"
version = "0.1.0"
description = "Distributed worker client for RuneSpy player tracking"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "websockets>=13.0",
    "cryptography>=43.0",
    "click>=8.0",
	"flask>=3.0",

]

[project.scripts]
runespy-worker = "runespy_worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runespy_worker"]
